syntax = "proto3";

package scuffle.events;

message UserDisplayName {
  optional string username = 2;
  optional string display_name = 1;
}

message ChatMessage {
  string id = 1;
  string channel_id = 2;
  string author_id = 3;
  string content = 4;
  int64 created_at = 5;
}
